# cpp-win

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.claude/: settings.local.json
src/: main.cpp
